--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Omnifood</title>
+    <title>OmniFood</title>
 </head>
 <body>
     <section class="section-hero">
@@ -22,6 +25,17 @@
                 </p>
                 <a href="#" class="btn btn--full mr-sm">Start eating well</a>
                 <a href="#" class="btn btn--outline">Learn more &darr;</a>
+                <div class="delivered-meals">
+                    <div class="delivered-imgs">
+                        <img src="img/customers/customer-1.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-2.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-3.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-4.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-5.jpg" alt="Customer photo" />
+                        <img src="img/customers/customer-6.jpg" alt="Customer photo" />
+                    </div>
+                    <p class="delivered-text"><span>250,000+</span> meals delivered last year!</p>
+                </div>
             </div>
             <div class="hero-img-box">
                 <img
