Setting up a reusable grid

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-how">
+            <div class="grid grid--2-cols container">
+                <div class="">Test 1</div>
+                <div class="">Test 1</div>
+                <div class="">Test 1</div>
+                <div class="">Test 1</div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
